03-deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-gitea-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-gitea-db
      containers:
        - name: container-0
          image: postgres:14
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db
      volumes:
        - name: db
          nfs:
            path: /data/gitea/db
            server: 10.100.100.13
