03-deployment-gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 0
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-gitea-gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-gitea-gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.22.6
          ports:
            - containerPort: 22
              name: ssh
              protocol: TCP
            - containerPort: 3000
              name: git
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          nfs:
            path: /data/gitea/data
            server: 10.100.100.13
