04-svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: gitea
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-gitea-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
