04-svc-gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: gitea
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-gitea-gitea
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-service-ssh
  namespace: gitea
spec:
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-gitea-gitea
  ports:
    - port: 22
      protocol: TCP
      targetPort: 22
  type: ClusterIP
