05-ingress-gitea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: git.int.puursam.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-service
                port:
                  number: 3000
  tls:
    - hosts:
        - git.int.puursam.be
      secretName: star-int-puursam-be-20270127
